# MDPGroup18

./: .gitignore  README.md  startup.sh
algorithm-service/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.py
algorithm-service/api/: main.py
algorithm-service/api/routes/: __init__.py  health.py  pathfinding.py
algorithm-service/api/schemas/: __init__.py  requests.py  responses.py
algorithm-service/src/algorithms/: __init__.py  algo.py
algorithm-service/src/entities/: __init__.py  entity.py  robot.py
algorithm-service/src/tools/: __init__.py  commands.py  consts.py  movement.py
android/: settings.gradle.kts
android/app/: .gitignore  build.gradle.kts
android/app/src/androidTest/java/com/example/mdpgroup18/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/mdpgroup18/: GridMapView.kt  MainActivity.kt
android/app/src/main/java/com/example/mdpgroup18/bluetooth/: BluetoothManager.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/example/mdpgroup18/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
image_rec_server/: .dockerignore  Dockerfile  README.md  client.py  inference_server.py  inspect_model.py  live_client.py  requirements.txt  startup.sh  test_inference.py
image_rec_train/: download_dataset.py  requirements.txt  yolov8_train.py
