[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "algorithm-service"
version = "0.1.0"
description = "MDP Algorithm Service for path planning"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MDPGroup18"}
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
